; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_fold-const.c_fold_view_convert_expr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_fold-const.c_fold_view_convert_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CHAR_BIT = common dso_local global i32 0, align 4
@BITS_PER_UNIT = common dso_local global i32 0, align 4
@NULL_TREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @fold_view_convert_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fold_view_convert_expr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [64 x i8], align 16
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* @CHAR_BIT, align 4
  %9 = icmp ne i32 %8, 8
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @BITS_PER_UNIT, align 4
  %12 = icmp ne i32 %11, 8
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %2
  %14 = load i32, i32* @NULL_TREE, align 4
  store i32 %14, i32* %3, align 4
  br label %28

15:                                               ; preds = %10
  %16 = load i32, i32* %5, align 4
  %17 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  %18 = call i32 @native_encode_expr(i32 %16, i8* %17, i32 64)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* @NULL_TREE, align 4
  store i32 %22, i32* %3, align 4
  br label %28

23:                                               ; preds = %15
  %24 = load i32, i32* %4, align 4
  %25 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @native_interpret_expr(i32 %24, i8* %25, i32 %26)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %23, %21, %13
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @native_encode_expr(i32, i8*, i32) #1

declare dso_local i32 @native_interpret_expr(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
